# HIT-GPU-coding

./: README.md
lab/: lab.md
work1/: 2022111568-郑乔译-work1.rar  CMakeLists.txt  work1.cu  work1.md
work2/: CMakeLists.txt  work2.md  work2_1.cu  work2_2.cu
work3/: 2022111568-郑乔译-work3.rar  CMakeLists.txt  work3.cu  work3.md
